k8s/base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine-nginx
  namespace: affine
spec:
  selector:
    matchLabels:
      app: affine-nginx
  template:
    metadata:
      labels:
        app: affine-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: affine-nginx-conf
