k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine-nginx
  namespace: affine
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: affine-nginx
